--- a/ht2/myProject/app/sass/_libs.scss
+++ b/ht2/myProject/app/sass/_libs.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
 @import "../libs/bootstrap/scss/bootstrap.scss";
 @import "../libs/magnific-popup/dist/magnific-popup.css";
 @mixin media($_minWidth, $_maxWidth) {
@@ -7,7 +6,8 @@
     }
 }
 //Задаем переменные цветовому решению.
-$mainColor: #f16d7f;
+$mainColor: #343a40;
+$buttonColor: #dc3545;
 $widthAll: 1140px;
 $colorAll: #ffffff;
 $fontFamily: 'Lato';
