--- a/ht2/myProject/app/sass/main.scss
+++ b/ht2/myProject/app/sass/main.scss
@@ -3,30 +3,25 @@
     @media (max-width: 992px) {
 
     }
-    
     // Большие девайсы («таблетки», >= 992px);
     @media (min-width: 992px) and (max-width:$widthAll) {
         //Для index.html
 
     }
-    
     // Для малых и очень малых девайсов ( <= 768px);
     @media (max-width: 768px) {
         //Для index.html
 
     }
-    
     // Средние девайсы («таблетки», >= 768px < 992px);
     @media (min-width: 768px) and (max-width:992px) {
         //Для index.html
 
     }
-    
     // Для крупных девайсов ( >= 992px);
     @media (min-width: 992px) {
 
     }
-    
     // Стили к страничке index.html, а также  footer + header для всех страничек;
     html {
         height: 100%;
@@ -42,13 +37,18 @@
             .navbar {
                 display: flex;
                 flex-direction: row;
+                .navbar-toggler {
+                    background-color: $buttonColor;
+                    opacity: .5;
+                }
+
                 a {
                     color: $buttonColor !important;
                 }
                 button {
-                    &:not(:first-child) {
+                    /*&:not(:first-child) {
                         margin-left: 50px;
-                    }
+                    }*/
                 }
                 .form-inline {
                     display: flex;
@@ -69,9 +69,10 @@
         }
         main {
             flex-grow: 1;
+            width: auto;
             padding-top: 30px;
             .card {
-                width: 70%;
+                width: 100%;
                 .card-body {
                     display: flex;
                     flex-direction: column;
@@ -81,6 +82,7 @@
             }
         }
         footer {
+            margin-top: 30px;
             background: $mainColor;
             display: flex;
             flex-direction: row;
@@ -121,6 +123,5 @@
                 }
             }
         }
-
     }
     
