--- a/ht2/myProject/app/css/main.css
+++ b/ht2/myProject/app/css/main.css
@@ -8852,7 +8852,12 @@ body {
         -webkit-box-flex: 1;
         -webkit-flex-grow: 1;
             -ms-flex-positive: 1;
-                flex-grow: 1; }
+                flex-grow: 1;
+        padding-left: 30px; }
+        body header .navbar .stretch p {
+          color: #ffffff; }
+          body header .navbar .stretch p span {
+            color: #dc3545; }
       body header .navbar .cart-account {
         color: #ffffff;
         font-size: 1.5em; }
@@ -8949,3 +8954,8 @@ body {
             color: #ffffff; }
             body footer .container ul li a:hover {
               color: #dc3545; }
+
+body main .container .burgers .card {
+  width: 100%; }
+  body main .container .burgers .card .card-body button {
+    margin-top: 30px; }
