--- a/ht2/myProject/app/sass/main.scss
+++ b/ht2/myProject/app/sass/main.scss
@@ -1,31 +1,30 @@
     @import '_libs';
     // Большие девайсы (десктопы, >= 992px);
-    @media (max-width: 992px) {
-
-    }
+    @media (max-width: 992px) {}
+    
     // Большие девайсы («таблетки», >= 992px);
     @media (min-width: 992px) and (max-width:$widthAll) {
         //Для index.html
-
     }
+    
     // Для малых и очень малых девайсов ( <= 768px);
     @media (max-width: 768px) {
         //Для index.html
-
     }
+    
     // Средние девайсы («таблетки», >= 768px < 992px);
     @media (min-width: 768px) and (max-width:992px) {
         //Для index.html
-
     }
+    
     // Для крупных девайсов ( >= 992px);
-    @media (min-width: 992px) {
-
-    }
+    @media (min-width: 992px) {}
+    
     // Стили к страничке index.html, а также  footer + header для всех страничек;
     html {
         height: 100%;
     }
+    
     body {
         display: flex;
         flex-direction: column;
@@ -41,7 +40,6 @@
                     background-color: $buttonColor;
                     opacity: .5;
                 }
-
                 a {
                     color: $buttonColor !important;
                 }
@@ -57,6 +55,13 @@
                 }
                 .stretch {
                     flex-grow: 1;
+                    padding-left: 30px;
+                    p {
+                        color: $colorAll;
+                        span {
+                            color: $buttonColor;
+                        }
+                    }
                 }
                 .cart-account {
                     color: $colorAll;
@@ -94,7 +99,7 @@
                 flex-direction: row;
                 padding: auto;
                 .data {
-                    color:$buttonColor;
+                    color: $buttonColor;
                     font-size: 1.5em;
                 }
                 .stretch {
@@ -112,12 +117,11 @@
                         height: 100%;
                         a {
                             //height: 60px;
-                            font-size:2em;
+                            font-size: 2em;
                             color: $colorAll;
                             &:hover {
                                 color: $buttonColor;
                             }
-
                         }
                     }
                 }
@@ -125,3 +129,20 @@
         }
     }
     
+    // Стили к страничке humburgers.html
+    body {
+        main {
+            .container {
+                .burgers {
+                    .card {
+                        width: 100%;
+                        .card-body {
+                            button {
+                                margin-top: 30px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+}
