--- a/ht2/myProject/app/sass/main.scss
+++ b/ht2/myProject/app/sass/main.scss
@@ -134,15 +134,33 @@
         main {
             .container {
                 .burgers {
-                    .card {
-                        width: 100%;
-                        .card-body {
-                            button {
-                                margin-top: 30px;
-                            }
-                        }
+                    legend {
+                        background-color: $mainColor;
+                        color: $buttonColor;
+                        padding: 3px 6px;
+                    }
+                    input {
+                        margin: .4rem;
+                        //background-color: $buttonColor;
+                    }
+                    input[type='radio']:after {
+                        width: 15px;
+                        height: 15px;
+                        border-radius: 15px;
+                        top: -2px;
+                        left: -1px;
+                        position: relative;
+                        background-color: $colorAll;
+                        content: '';
+                        display: inline-block;
+                        visibility: visible;
+                        
+                    }
+                    input:checked:after {                        
+                        background-color: $buttonColor;
+                        
                     }
                 }
             }
         }
-}
+    }
