--- a/ht2/myProject/app/css/main.css
+++ b/ht2/myProject/app/css/main.css
@@ -8978,3 +8978,24 @@ body main .container .burgers input[type='radio']:after {
 
 body main .container .burgers input:checked:after {
   background-color: #dc3545; }
+
+body main .container .burgers .check {
+  background-color: #343a40;
+  color: #ffffff;
+  width: 200px;
+  height: 50px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: auto; }
+  body main .container .burgers .check:hover {
+    color: #dc3545; }
