--- a/ht2/myProject/app/sass/_libs.scss
+++ b/ht2/myProject/app/sass/_libs.scss
@@ -1,5 +1,5 @@
-@import "../libs/bootstrap/scss/bootstrap.scss";
-@import "../libs/magnific-popup/dist/magnific-popup.css";
+//@import "../libs/bootstrap/scss/bootstrap.scss";
+//@import "../libs/magnific-popup/dist/magnific-popup.css";
 @mixin media($_minWidth, $_maxWidth) {
     @media (min-width: $_minWidth) and (max-width: $_maxWidth) {
         @content;
