--- a/ht2/myProject/app/sass/libs.sass
+++ b/ht2/myProject/app/sass/libs.sass
@@ -1,2 +1,2 @@
-@import "../libs/bootstrap/scss/bootstrap.scss";
-@import "../libs/magnific-popup/dist/magnific-popup.css";
+//@import "../libs/bootstrap/scss/bootstrap.scss";
+//@import "../libs/magnific-popup/dist/magnific-popup.css";
