Сделал 1-ое задание

--- a/ht3/app/sass/main.scss
+++ b/ht3/app/sass/main.scss
@@ -127,6 +127,11 @@
                 }
             }
         }
+        .modal {
+            container-fluid {
+                padding: 10px !important;
+            }
+        }
     }
     
     // Стили к страничке humburgers.html
