--- a/ht3/app/sass/main.scss
+++ b/ht3/app/sass/main.scss
@@ -52,23 +52,101 @@
                     display: flex;
                     flex-direction: row;
                     width: 100%;
-                }
-                .stretch {
-                    flex-grow: 1;
-                    padding-left: 30px;
-                    p {
-                        color: $colorAll;
-                        span {
-                            color: $buttonColor;
-                        }
+                    .stretchBox {
+                        min-width: 30%;
+                    }
+                    .search-field {
+                        align-items: flex-end;
+                        justify-content: flex-end;
+                        background-color: $colorAll;
+                        color: $buttonColor;
+                    }
+                    .btn-search {
+                        color: $buttonColor;
                     }
                 }
                 .cart-account {
-                    color: $colorAll;
                     font-size: 1.5em;
                     &:hover {
                         color: $buttonColor;
                     }
+                }
+                .cart {
+                    position: relative;
+                }
+                .cart-block {
+                    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+                    border-radius: 5px;
+                    box-sizing: border-box;
+                    right: 0;
+                    top: 130%;
+                    position: absolute;
+                    background-color: white;
+                    padding: 20px;
+                    color: black;
+                    width: 300px;
+                }
+                .invisible {
+                    display: none;
+                }
+                .cart-block:before {
+                    content: '';
+                    width: 0;
+                    height: 0;
+                    position: absolute;
+                    top: -10px;
+                    right: 35px;
+                    border-left: 10px solid transparent;
+                    border-right: 10px solid transparent;
+                    border-bottom: 10px solid white;
+                }
+                .buy-btn,
+                .del-btn {
+                    margin-top: 5px;
+                    background-color: #2f2a2d;
+                    padding: 5px 15px;
+                    border: 1px solid transparent;
+                    color: #fafafa;
+                    border-radius: 5px;
+                    transition: all ease-in-out .4s;
+                    cursor: pointer;
+                }
+                .buy-btn:hover,
+                .del-btn:hover {
+                    background-color: #fafafa;
+                    color: #2f2a2d;
+                    border: 1px solid #2f2a2d;
+                }
+                .cart-item {
+                    display: flex;
+                    justify-content: space-between;
+                }
+                .cart-item:not(:last-child) {
+                    margin-bottom: 20px;
+                }
+                .product-bio {
+                    display: flex;
+                }
+                .cart-item img {
+                    align-self: flex-start;
+                    margin-right: 15px;
+                }
+                .product-single-price {
+                    color: #474747;
+                    font-size: 0.5em;
+                }
+                .product-price {
+                    margin-left: 30px;
+                }
+                .product-desc {
+                    max-width: 150px;
+                }
+                .product-quantity {
+                    margin-top: 15px;
+                    font-size: 0.75em;
+                }
+                .right-block {
+                    text-align: right;
                 }
             }
         }
@@ -159,21 +237,19 @@
                         content: '';
                         display: inline-block;
                         visibility: visible;
-                        
                     }
-                    input:checked:after {                        
+                    input:checked:after {
                         background-color: $buttonColor;
-                        
                     }
                     .check {
-                        background-color:$mainColor;
+                        background-color: $mainColor;
                         color: $colorAll;
                         width: 200px;
                         height: 50px;
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        margin:auto;
+                        margin: auto;
                         &:hover {
                             color: $buttonColor;
                         }
