--- a/ht6/advancedVersion/css/main.css
+++ b/ht6/advancedVersion/css/main.css
@@ -12434,3 +12434,31 @@ body #app {
     display: flex;
     flex-direction: column;
 }
+.error-msg {
+    padding: 30px 20px;
+    background-color: #dc3545;
+    color: white;
+    position: relative;
+}
+.error-block {
+    background-color: rgba(0,0,0, .5);
+    justify-content: center;
+    display: flex;
+    position: absolute;
+    top: 0;
+
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    z-index: 2000;
+}
+.close-btn {
+    font-size: 1.5em;
+    top: -40px;
+    position: absolute;
+    right: 0;
+    background: none;
+    border: none;
+    color: white;
+    font-weight: bold;
+}
