--- a/ht8/project/public/css/main.css
+++ b/ht8/project/public/css/main.css
@@ -9252,6 +9252,12 @@ a.text-dark:hover, a.text-dark:focus {
   body .featuredItems {
     width: 100%;
     min-height: auto; }
+  body .contantAim .menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
   body .contantAim .contantAimInside {
     height: auto; }
     body .contantAim .contantAimInside .content2,
@@ -9404,7 +9410,8 @@ body {
   body header {
     height: 100px;
     border-bottom: 1px solid #ececec;
-    background-color: #ffffff; }
+    background-color: #ffffff;
+    z-index: 2; }
     body header .headerInside {
       margin: 0 auto;
       width: 1140px;
@@ -9499,12 +9506,104 @@ body {
               -ms-flex-align: center;
                   align-items: center;
           margin-left: auto; }
+          body header .headerInside .container:first-child .bg-light .account .cart {
+            position: relative; }
+          body header .headerInside .container:first-child .bg-light .account .cart-block {
+            -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+            -webkit-border-radius: 5px;
+            border-radius: 5px;
+            -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+            right: 0;
+            top: 130%;
+            position: absolute;
+            background-color: #e9e9e9;
+            padding: 20px;
+            color: black;
+            width: 300px;
+            z-index: 1; }
+          body header .headerInside .container:first-child .bg-light .account .invisible {
+            display: none; }
+          body header .headerInside .container:first-child .bg-light .account .cart-block:before {
+            content: '';
+            width: 0;
+            height: 0;
+            position: absolute;
+            top: -10px;
+            right: 35px;
+            -webkit-box-sizing: border-box;
+                    box-sizing: border-box;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            border-bottom: 10px solid #e9e9e9; }
+          body header .headerInside .container:first-child .bg-light .account .cart-item {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-pack: justify;
+            -webkit-justify-content: space-between;
+            -ms-flex-pack: justify;
+            justify-content: space-between; }
+            body header .headerInside .container:first-child .bg-light .account .cart-item img {
+              -webkit-align-self: flex-start;
+              -ms-flex-item-align: start;
+              align-self: flex-start;
+              margin-right: 15px; }
+          body header .headerInside .container:first-child .bg-light .account .cart-item:not(:last-child) {
+            margin-bottom: 20px; }
+          body header .headerInside .container:first-child .bg-light .account .product-bio {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex; }
+          body header .headerInside .container:first-child .bg-light .account .product-single-price {
+            color: #474747;
+            font-size: 0.5em; }
+          body header .headerInside .container:first-child .bg-light .account .product-price {
+            margin-left: 30px; }
+          body header .headerInside .container:first-child .bg-light .account .product-desc {
+            max-width: 150px; }
+          body header .headerInside .container:first-child .bg-light .account .product-quantity {
+            margin-top: 15px;
+            font-size: 0.75em; }
+          body header .headerInside .container:first-child .bg-light .account .right-block {
+            text-align: right; }
           body header .headerInside .container:first-child .bg-light .account a {
             text-decoration: none;
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-pack: center;
+            -webkit-justify-content: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
             color: darkgray;
             font-size: 30px;
-            padding-right: 26px; }
-          body header .headerInside .container:first-child .bg-light .account button {
+            padding-right: 26px;
+            position: relative; }
+            body header .headerInside .container:first-child .bg-light .account a span {
+              display: -webkit-box;
+              display: -webkit-flex;
+              display: -ms-flexbox;
+              display: flex;
+              -webkit-box-pack: center;
+              -webkit-justify-content: center;
+                  -ms-flex-pack: center;
+                      justify-content: center;
+              position: absolute;
+              min-width: 20px;
+              max-width: auto;
+              background-color: #f16d7f;
+              font-size: 12px;
+              top: -10px;
+              right: 15px;
+              -webkit-border-radius: 10px;
+                      border-radius: 10px;
+              color: #ffffff; }
+          body header .headerInside .container:first-child .bg-light .account #account {
             height: 38px;
             width: 130px;
             border: none;
@@ -9522,6 +9621,7 @@ body {
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
+      height: auto;
       margin: 0 auto;
       width: 1140px; }
       body .mainContainer .nawWrap nav {
@@ -9529,7 +9629,116 @@ body {
         -webkit-box-align: center;
         -webkit-align-items: center;
             -ms-flex-align: center;
-                align-items: center; }
+                align-items: center;
+        height: auto; }
+        body .mainContainer .nawWrap nav .menu {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-flex-wrap: wrap;
+              -ms-flex-wrap: wrap;
+                  flex-wrap: wrap;
+          -webkit-box-orient: horizontal;
+          -webkit-box-direction: normal;
+          -webkit-flex-flow: row wrap;
+              -ms-flex-flow: row wrap;
+                  flex-flow: row wrap;
+          -webkit-box-pack: justify;
+          -webkit-justify-content: space-between;
+              -ms-flex-pack: justify;
+                  justify-content: space-between;
+          height: auto; }
+        body .mainContainer .nawWrap nav .menu_link {
+          color: #222;
+          font-size: 14px;
+          font-weight: 700;
+          text-transform: uppercase;
+          display: block;
+          padding: 20px; }
+        body .mainContainer .nawWrap nav .menu_link:hover {
+          color: #f16d7f; }
+        body .mainContainer .nawWrap nav .menu_link:active {
+          color: #f16d7f; }
+        body .mainContainer .nawWrap nav .drop_menu {
+          -webkit-border-radius: 5px;
+                  border-radius: 5px;
+          background-color: #ffffff;
+          border: 1px solid #ececec;
+          padding: 24px;
+          position: absolute;
+          display: none;
+          margin-left: -10px;
+          margin-top: -9px; }
+        body .mainContainer .nawWrap nav .drop_menu:before {
+          content: '';
+          display: block;
+          width: 10px;
+          height: 10px;
+          background-color: #fff;
+          position: absolute;
+          top: -6px;
+          left: 50px;
+          -webkit-transform: rotate(45deg);
+              -ms-transform: rotate(45deg);
+                  transform: rotate(45deg);
+          border-top: 1px solid #e8e8e8;
+          border-left: 1px solid #e8e8e8; }
+        body .mainContainer .nawWrap nav li {
+          list-style-type: none; }
+        body .mainContainer .nawWrap nav .menu_list {
+          position: relative;
+          z-index: 1; }
+        body .mainContainer .nawWrap nav .menu_list:hover .drop_menu {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex; }
+        body .mainContainer .nawWrap nav ul {
+          padding: 0; }
+        body .mainContainer .nawWrap nav .drop_link {
+          color: #646464;
+          font-size: 14px !important;
+          font-weight: 400;
+          line-height: 28px;
+          letter-spacing: 0.35px;
+          text-transform: capitalize; }
+        body .mainContainer .nawWrap nav .drop_link:hover {
+          color: #f16d7f; }
+        body .mainContainer .nawWrap nav .drop_h3 {
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 32px;
+          text-transform: uppercase;
+          letter-spacing: 0.35px;
+          border-bottom: 1px solid #e8e8e8; }
+        body .mainContainer .nawWrap nav .drop-flex {
+          width: 235px;
+          margin-right: 46px; }
+        body .mainContainer .nawWrap nav .drop-flex:last-of-type {
+          margin-right: 0; }
+        body .mainContainer .nawWrap nav .a_with_drop_menu:hover .drop_menu {
+          left: -50px; }
+        body .mainContainer .nawWrap nav .button_browse {
+          z-index: 2;
+          padding-top: 10px;
+          padding-bottom: 10px; }
+        body .mainContainer .nawWrap nav .drop_browse {
+          margin-left: 0;
+          margin-top: 9px;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+          -webkit-flex-direction: column;
+              -ms-flex-direction: column;
+                  flex-direction: column; }
+        body .mainContainer .nawWrap nav .drop_flex_browse {
+          margin-right: 0; }
+        body .mainContainer .nawWrap nav .drop_browse:before {
+          left: 70px; }
+        body .mainContainer .nawWrap nav .drop-flex-folge {
+          margin-top: 30px; }
+        body .mainContainer .nawWrap nav .drop_menu_end:before {
+          left: 160px; }
         body .mainContainer .nawWrap nav a {
           padding: 0 15px;
           color: #222222;
